tests/paczka1/fuzzy1/98993547.err
Error in line 2: lP6IQ A299 50,9
Error in line 1: eKAjYGh A684 99,0
Error in line 6: eKAjYGh A299 451,2
Error in line 22: lP6IQ A743 72,3
Error in line 28: mPwYm3GPb A743 71,8
Error in line 25: haNIAaVS A299 9,9
Error in line 32: mPwYm3GPb A684 -2,6
Error in line 29: mPwYm3GPb A684 71,7
Error in line 21: eKAjYGh A743 41,2
